   - RecurrentNew: managed as a singleton (todo #1213).
   - RecurrentRun: takes advantage of ofaITVColumnable and companion interfaces (todo #1182).
   - SettlementPage: takes advantage of new display facilities.
   - TVAForm: takes advantage of ofaITVColumnable and companion interfaces (todo #1182).
   - TVARecord: takes advantage of ofaITVColumnable and companion interfaces (todo #1182).

 Bug fixes:

   - AccountSelect: close the window on account selection (todo #1187).
   - IPrintable: does not say "succesfully printed" when cancelled (todo #1188).
   - LedgerClose: fix typo.
   - OpeTemplatePage: fix row activation.
   - OpeTemplateSelect: fix missing getter.
   - OpeTemplateStore: fix row insertion (todo #1189).
   - PeriodClose: fix the 'archive accounts' user preference (todo #1205).
   - RecurrentModel: fix update on OpeTemplate mnemmonic modification (todo #1203).
   - TVBin: Fix sort on incomplete rows (todo #1199).
   - AccountSelect, OpeTemplateSelect: fix columns visibility propagation (todo #1215).

 Other changes:

   - AccountSelect, OpeTemplateSelect: homogeneize UIs.
   - EntryListview, EntryStore: new classes.
   - myIActionMap, myAccelGroup: simplify code and review interface.
   - All collections: are no more sorted (todo #1208).
   - Object classes: review xxx_use_yyy() usage (todo #1207).
   - ofaActionPage: new ofaPage-derived class.
   - ofaPanedPage: new ofaPage-derived class.
   - ofaRateStore, ofaRateTreeview: new classes.
   - RecurrentManagePage: renamed to RecurrentModelPage (todo #1211).
   - All stores take advantage of hub as a private variable (todo #1216).
   - Normalize virtual method names (todo #1218).

-----------------------------------------------------------------------
 Version 0.59
 ============

 Released on 2016-09-01
  
 New features and improvements:

   - RecurrentOperation: DB Model v4.
   - Rename the application to Open Firm Accounting (todo #1164).
   - BatImport: add a completeness check on imported lines.